--- a/AngularJsWithMvc/AngularJsWithMvc/bin/AngularJsWithMvc.dll.config
+++ b/AngularJsWithMvc/AngularJsWithMvc/bin/AngularJsWithMvc.dll.config
@@ -10,7 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-AngularJsWithMvc-20161128125459.mdf;Initial Catalog=aspnet-AngularJsWithMvc-20161128125459;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="GridDBContext" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\UIGrid.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="GridDBContext" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\Grid.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
